// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileInput Component FileInput handle add file successfully through input 1`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    />
  </div>
</div>
`;

exports[`FileInput Component FileInput handle add file successfully through input 2`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
          >
            hello.png
          </div>
        </div>
        <div
          class="right"
        >
          <progress
            class="progress"
            max="100"
            value="50"
          />
          <div
            class="delete-icon"
          >
            <i
              class="icon"
              icon="fal,spinner"
              spin="true"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handle add file successfully through input 3`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
          >
            hello.png
          </div>
        </div>
        <div
          class="right"
        >
          <div
            class="delete-icon"
            data-testid="TEST-ID-delete"
          >
            <i
              class="icon"
              icon="fal,trash-alt"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handle add file unsucessfully through input 1`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    />
  </div>
</div>
`;

exports[`FileInput Component FileInput handle add file unsucessfully through input 2`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <span
        style="display: inline-block; width: 100%; overflow: hidden;"
      >
        <div
          class="item-container error"
        >
          <div
            class="left"
          >
            <div
              class="paperclip-icon"
            >
              <i
                class="icon"
                icon="fal,exclamation-triangle"
              />
            </div>
            <div
              class="name"
              data-testid="TEST-ID-download"
            >
              hello.png
            </div>
          </div>
          <div
            class="right"
          >
            <div
              class="delete-icon"
              data-testid="TEST-ID-delete"
            >
              <i
                class="icon"
                icon="fal,trash-alt"
              />
            </div>
          </div>
        </div>
      </span>
      <div>
        <div
          class="gds-tooltip top"
          style="left: -99999px; top: -99999px; opacity: 0;"
        >
          <div
            class="tooltip-arrow"
          />
          <div
            class="tooltip-label"
          >
            Internal Error
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handle add file with timeout through input 1`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    />
  </div>
</div>
`;

exports[`FileInput Component FileInput handle add file with timeout through input 2`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <span
        style="display: inline-block; width: 100%; overflow: hidden;"
      >
        <div
          class="item-container error"
        >
          <div
            class="left"
          >
            <div
              class="paperclip-icon"
            >
              <i
                class="icon"
                icon="fal,exclamation-triangle"
              />
            </div>
            <div
              class="name"
              data-testid="TEST-ID-download"
            >
              hello.png
            </div>
          </div>
          <div
            class="right"
          >
            <div
              class="delete-icon"
              data-testid="TEST-ID-delete"
            >
              <i
                class="icon"
                icon="fal,trash-alt"
              />
            </div>
          </div>
        </div>
      </span>
      <div>
        <div
          class="gds-tooltip top"
          style="left: -99999px; top: -99999px; opacity: 0;"
        >
          <div
            class="tooltip-arrow"
          />
          <div
            class="tooltip-label"
          >
            Timeout
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handle drag event for highlight 1`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    />
  </div>
</div>
`;

exports[`FileInput Component FileInput handle drag event for highlight 2`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input highlight"
          data-testid="TEST-ID"
          multiple=""
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    />
  </div>
</div>
`;

exports[`FileInput Component FileInput handle drag event for highlight 3`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    />
  </div>
</div>
`;

exports[`FileInput Component FileInput handle drop of file 1`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    />
  </div>
</div>
`;

exports[`FileInput Component FileInput handle drop of file 2`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
          >
            file1.pdf
          </div>
        </div>
        <div
          class="right"
        >
          <div
            class="delete-icon"
          >
            <i
              class="icon"
              icon="fal,spinner"
              spin="true"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handle unsuccessfull add file when quota reached 1`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
          >
            AME
          </div>
        </div>
        <div
          class="right"
        >
          <div
            class="delete-icon"
            data-testid="TEST-ID-delete"
          >
            <i
              class="icon"
              icon="fal,trash-alt"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handle unsuccessfull add file when quota reached 2`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
          >
            AME
          </div>
        </div>
        <div
          class="right"
        >
          <div
            class="delete-icon"
            data-testid="TEST-ID-delete"
          >
            <i
              class="icon"
              icon="fal,trash-alt"
            />
          </div>
        </div>
      </div>
      <span
        style="display: inline-block; width: 100%; overflow: hidden;"
      >
        <div
          class="item-container error"
        >
          <div
            class="left"
          >
            <div
              class="paperclip-icon"
            >
              <i
                class="icon"
                icon="fal,exclamation-triangle"
              />
            </div>
            <div
              class="name"
              data-testid="TEST-ID-download"
            >
              hello.png
            </div>
          </div>
          <div
            class="right"
          >
            <div
              class="delete-icon"
              data-testid="TEST-ID-delete"
            >
              <i
                class="icon"
                icon="fal,trash-alt"
              />
            </div>
          </div>
        </div>
      </span>
      <div>
        <div
          class="gds-tooltip top"
          style="left: -99999px; top: -99999px; opacity: 0;"
        >
          <div
            class="tooltip-arrow"
          />
          <div
            class="tooltip-label"
          >
            Quota exceeded: Maximum number of files reached
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handles delete rejections of a file 1`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
          >
            AME
          </div>
        </div>
        <div
          class="right"
        >
          <div
            class="delete-icon"
            data-testid="TEST-ID-delete"
          >
            <i
              class="icon"
              icon="fal,trash-alt"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handles delete rejections of a file 2`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
          >
            AME
          </div>
        </div>
        <div
          class="right"
        >
          <div
            class="delete-icon"
            data-testid="TEST-ID-delete"
          >
            <i
              class="icon"
              icon="fal,trash-alt"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handles download and delete of a file 1`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
          >
            AME
          </div>
        </div>
        <div
          class="right"
        >
          <div
            class="delete-icon"
            data-testid="TEST-ID-delete"
          >
            <i
              class="icon"
              icon="fal,trash-alt"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handles download and delete of a file 2`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    />
  </div>
</div>
`;

exports[`FileInput Component FileInput renders 1`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          multiple=""
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
          >
            NAME
          </div>
        </div>
        <div
          class="right"
        >
          <div
            class="delete-icon"
          >
            <i
              class="icon"
              icon="fal,trash-alt"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput renders without input value 1`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          multiple=""
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    />
  </div>
</div>
`;

exports[`FileInput Component FileInput renders without input value 2`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          multiple=""
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    />
  </div>
</div>
`;
